--- a/app/src/app/tab1/tab1.page.html
+++ b/app/src/app/tab1/tab1.page.html
@@ -1,14 +1,14 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab One
+      Publicaciones
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
     <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
+      <ion-img src="https://storage.googleapis.com/efor-static/UPTC/Smartkey/uptc_acred_120.png"></ion-img>
       <ion-card-header>
         <ion-card-subtitle>Get Started</ion-card-subtitle>
         <ion-card-title>Welcome to Ionic</ion-card-title>
