--- a/app/src/app/tab1/tab1.page.html
+++ b/app/src/app/tab1/tab1.page.html
@@ -8,34 +8,33 @@
 
 <ion-content>
     <ion-card class="welcome-card">
-      <ion-img src="https://storage.googleapis.com/efor-static/UPTC/Smartkey/uptc_acred_120.png"></ion-img>
+      <ion-img src="assets/image/wall.jpg"></ion-img>
       <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
+        <ion-card-title>Bienvenido</ion-card-title>
       </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
     </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+    <ion-card class="publication-cards">
+      <ion-img src="assets/image/notData.png"></ion-img>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Titulo</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-card-content>
+        Keep close to Nature's heart... and break clear away, once in awhile,
+        and climb a mountain or spend a week in the woods. Wash your spirit clean.
+      </ion-card-content>
+      <ion-row>
+        <ion-col size="6">
+          <ion-text color="black">
+            <h6>Fecha</h6>
+          </ion-text>
+        </ion-col>
+        <ion-col size="6">
+            <ion-text color="black">
+                <h6>Ubicación</h6>
+            </ion-text>
+        </ion-col>
+      </ion-row>
+    </ion-card>
 </ion-content>
