--- a/app/src/app/tab2/tab2.page.html
+++ b/app/src/app/tab2/tab2.page.html
@@ -7,23 +7,40 @@
 </ion-header>
 
 <ion-content>
+  <!-- <form>
+    <ion-list>
+      <ion-item>
+        <ion-label stacked>Titulo:</ion-label>
+        <ion-input type="text" [(ngModel)]="title" placeholder="Titulo" require></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label stacked>Descripción:</ion-label>
+        <ion-input type="text" [(ngModel)]="description" placeholder="Descripción" require></ion-input>
+      </ion-item> 
+    </ion-list>
+  </form> -->
+
   <ion-grid fixed>
     <ion-row>
       <ion-col size="10" offset="1">
         <ion-item>
-          <ion-input type="text" [(ngModel)]="title" placeholder="Titulo" require></ion-input>
+          <ion-label stacked>Titulo:</ion-label>
+          <ion-textarea [(ngModel)]="title" color="black" require></ion-textarea>
         </ion-item>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="10" offset="1">
         <ion-item>
+          <ion-label stacked>Descripción:</ion-label>
           <ion-textarea [(ngModel)]="description" color="black" require></ion-textarea>
         </ion-item>
       </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col size="4" offset="4">
+        <ion-button color="warning" (click)="sendPublication()">Agregar</ion-button>
+      </ion-col>
+    </ion-row>
   </ion-grid>
-  <ion-button (click)="sendPublication()">
-    Click me
-  </ion-button>
 </ion-content>
